--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "@tailwindcss/vite": "^4.0.1",
-    "framer-motion": "^12.0.6",
+    "clsx": "^2.1.1",
+    "fmotion-variants": "^0.1.2",
+    "framer-motion": "^12.3.1",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
